[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudflare-image-uploader"
authors = [
    {name = "Alex Grand", email = "me@alexgrand.dev"},
]
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["version"]

dependencies = [
    "aiofiles==24.1.0",
    "aiohttp==3.11.13",
    "requests==2.32.3",
    "dotenv==0.9.9",
    "python-dotenv==1.0.1"
]

[project.optional-dependencies]
dev = [
    "black==25.1.0",
    "isort==6.0.1"
]

[project.scripts]
cfimgup = "uploader.cli:main"
