[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudflare-image-uploader"
authors = [
    {name = "Alex Grand", email = "me@alexgrand.dev"},
]
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["version"]

dependencies = [
    "aiofiles==24.1.0",
    "aiohttp[speedups]==3.11.13",  # installs aiodns and Brotli for performance
    "requests==2.32.3"
]

[project.optional-dependencies]
dev = [
    "black==25.1.0",
    "isort==6.0.1"
]

[tool.setuptools]
packages = ["cloudflare_image_uploader"]
