[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudflare-image-uploader"
authors = [
    {name = "Alex Grand", email = "me@alexgrand.dev"},
]
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["version"]

dependencies = [
    "aiofiles==24.1.0",
    "aiohttp[speedups]==3.11.13",  # installs aiodns and Brotli for performance
]

[project.optional-dependencies]
dev = [
    "black==25.1.0",
    "isort==6.0.1",
    "nox==2025.5.1",
    "coverage==7.9.1",
    "pylint==3.3.7",
]
docs = [
    "mkdocs==1.6.1",
    "mkdocs-include-markdown-plugin==7.1.6",
    "mkdocs-material==9.6.14",
    "mkdocstrings==0.29.1",
    "mkdocstrings-python==1.16.12",
]
[tool.setuptools]
packages = ["cloudflare_image_uploader"]
